Add dns config support
